# study-compile-time-rng

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ctest.yml
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  calc.cpp  calc.hpp
test/: CMakeLists.txt  test_calc_basic.cpp  test_calc_death.cpp
